Bug 205791 - kmail cannot display html messages with images refered with Content ID
Summary: kmail cannot display html messages with images refered with Content ID
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 205626 207928 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-08-31 15:15 UTC by Mathieu Jobin
Modified: 2012-09-12 15:01 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments
Non inline image mail (80.34 KB, application/mbox)
2010-06-03 15:33 UTC, Gareth
Details
Example mail (12.16 KB, application/mbox)
2010-06-24 12:36 UTC, Thomas Tanghus
Details
attachment-27234-0.html (2.50 KB, text/html)
2012-07-21 03:50 UTC, Jerry Lumpkins
Details
attachment-27234-1.dat (1 bytes, multipart/alternative)
2012-07-21 03:50 UTC, Jerry Lumpkins
Details
emailSrcForImage.txt (224.05 KB, text/plain)
2012-07-21 03:50 UTC, Jerry Lumpkins
Details
kmailInlineHtmlProblem.png (226.14 KB, image/png)
2012-07-21 03:50 UTC, Jerry Lumpkins
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mathieu Jobin 2009-08-31 15:15:52 UTC
Version:            (using KDE 4.3.0)
Installed from:    Ubuntu Packages

Hey guys,

It is probably outlook making it this way but everytime I receive an html email with pictures, they dont get displayed in kmail. I must individually open them in gwenview

inside the email source, images are define like this..


--_028_A5DD33C05033144FBB1D507F8D3A56A80439784483QCVXMP01wwcor_
Content-Type: image/gif; name="image005.gif"
Content-Description: image005.gif
Content-Disposition: inline; filename="image005.gif"; size=34890;
	creation-date="Sat, 29 Aug 2009 16:29:20 GMT";
	modification-date="Sat, 29 Aug 2009 16:29:20 GMT"
Content-ID: <5.692853090@web52606.mail.re2.yahoo.com>
Content-Transfer-Encoding: base64


then it is refered to as: 

<IMG=20
id=3DEC__x005f_x005f_x005f_x0000_i1032 height=3D2=
53=20
                          alt=3Df62b330.gif=20
                          src=3D"cid:5.692853090@web52606.mail.re2.yahoo.co=
m"=20
                          width=3D262>

thank you
Comment 1 Mathieu Jobin 2009-08-31 15:17:17 UTC
some more top headers ... 


Accept-Language: en-US
Content-Language: en-US
X-MS-Exchange-Organization-AuthAs: Internal
X-MS-Exchange-Organization-AuthMechanism: 03
X-MS-Exchange-Organization-AuthSource: qcwxhp02.wwcorp.net
X-MS-Has-Attach: yes
X-Auto-Response-Suppress: DR, OOF, AutoReply
X-MS-Exchange-Organization-SCL: -1
X-MS-TNEF-Correlator:
acceptlanguage: en-US
Content-Type: multipart/related;
  boundary="_028_A5DD33C05033144FBB1D507F8D3A56A80439784483QCVXMP01wwcor_";
  type="multipart/alternative"
MIME-Version: 1.0
X-Length: 788778
X-UID: 11571
Comment 2 Martin Koller 2009-08-31 20:17:09 UTC
Please attach a complete test mail here. Thanks.
It makes debugging much easier.
Comment 3 Martin Koller 2009-08-31 20:18:02 UTC
BTW, I think it's the same as bug 205626
Can you check, please ?
Comment 4 Jonathan Marten 2009-09-20 18:13:12 UTC
*** Bug 207928 has been marked as a duplicate of this bug. ***
Comment 5 Mathieu Jobin 2009-12-08 15:35:26 UTC
the src attribute in the img tag is different but it is a similar problem to #205626
Comment 6 Björn Ruberg 2010-03-05 18:22:33 UTC
*** Bug 205626 has been marked as a duplicate of this bug. ***
Comment 7 Gareth 2010-06-03 15:33:46 UTC
Created attachment 47635 [details]
Non inline image mail
Comment 8 Gareth 2010-06-03 15:34:25 UTC
I experience the same issue and it is not just limited to Outlook. This happens when sending mail from KMail to KMail (one address to another setup in the same KMail client). I created an HTML mail with KMail with an inline image which on receipt in KMail shows a little placeholder instead of the image itself. I have attached the message file as an mbox file saved straight out of KMail just before this comment.
Comment 9 Thomas Tanghus 2010-06-24 12:35:35 UTC
I experience the same when viewing mails with inline images from an online IMAP server. If I hit the 'v' key to view the source the image is loaded in the mail. If I save the mail locally as an .mbox file and view is using KMail View the images are loaded correctly.
I'll attach an example mail.

BTW: KMail 1.13.3
Comment 10 Thomas Tanghus 2010-06-24 12:36:58 UTC
Created attachment 48284 [details]
Example mail
Comment 11 Michel Nolard 2012-06-04 09:54:46 UTC
I've KMail 1.13.5 and I'm still experiencing the same problems.

The mails giving problems here have been written using Microsoft Outlook and are made available through my company's IMAP server.
Comment 12 Jerry Lumpkins 2012-06-19 10:47:59 UTC
All of the reports that I received from my Astaro firewall contain charts and graphs depicting network usage. KMail is the only email client that doesn't display these properly.
Comment 13 Laurent Montel 2012-07-18 11:07:21 UTC
Created attachment 72658 [details]
attachment-27234-0.html

do you test with kmail2 ? or just kmail1 ?
When I test with kmail2 it's inline.
or perhaps paste a screenshot of you problem when you display in html
Comment 14 Jerry Lumpkins 2012-07-21 03:50:05 UTC
Hi,

I don't know what you mean by KMail2. I am using the latest version of
kmail that is distributed with Fedora 17.
When I choose Help->KMail Introduction, The dialog contains KMail 4.8.4.

See the attached png file for a look at what gets displayed.

This looks fine in all other mail clients. (The embedded images are
rendered as part of the page as one would expect.)

I am also attaching the source for the page associated with the attached
image as produced by using the 'View->View Source' menu option in KMail.

I just wanted to offer you a sincere thanks for your efforts.
KMail allowed me to get back the mail I almost lost because I forgot to
backup the mail in Evolution before upgrading, and Evolution offers no way
to import it's raw mail data.

Best Regards,


Jerry Lumpkins
Software Engineer DakotaSoft














On Wed, Jul 18, 2012 at 7:07 AM, Laurent Montel <montel@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=205791
>
> Laurent Montel <montel@kde.org> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>                  CC|                            |montel@kde.org
>
> --- Comment #13 from Laurent Montel <montel@kde.org> ---
> do you test with kmail2 ? or just kmail1 ?
> When I test with kmail2 it's inline.
> or perhaps paste a screenshot of you problem when you display in html
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
>
Comment 15 Jerry Lumpkins 2012-07-21 03:50:08 UTC
Created attachment 72659 [details]
attachment-27234-1.dat
Comment 16 Jerry Lumpkins 2012-07-21 03:50:08 UTC
Created attachment 72660 [details]
emailSrcForImage.txt
Comment 17 Jerry Lumpkins 2012-07-21 03:50:08 UTC
Created attachment 72661 [details]
kmailInlineHtmlProblem.png
Comment 18 Laurent Montel 2012-07-29 11:29:57 UTC
(In reply to comment #15)
> Created attachment 72659 [details]
> attachment-27234-1.dat

It's not an email
it's just 1 bit.
Could you attach email ?
Comment 19 Jerry Lumpkins 2012-08-01 01:51:06 UTC
Hi Laurent,

I deleted that email a while back. But, I sent you the entire source for it as text in the following attachment. Won't that provide you with everything you need to see the entire email?

I can send you another similar one if you really need it. I get one every night.
But, I would have thought that the entire source as text would give you everything you need.

Thanks for your efforts,


Regards,


Jerry Lumpkins
Comment 20 Laurent Montel 2012-08-01 06:11:27 UTC
Yes sent me another one please.
I need to test it and debug it
Regards.
Comment 21 Laurent Montel 2012-09-04 06:01:08 UTC
wait for info
Comment 22 Jerry Lumpkins 2012-09-07 02:44:18 UTC
I provided you with the full source of an email containing embedded images
that does not render properly. This was well over a month ago. Please
review that attachment. (This is not the one with no content.)

On Tuesday, September 4, 2012, Laurent Montel <montel@kde.org> wrote:
> https://bugs.kde.org/show_bug.cgi?id=205791
>
> Laurent Montel <montel@kde.org> changed:
>
>            What    |Removed                     |Added
>
----------------------------------------------------------------------------
>              Status|NEW                         |NEEDSINFO
>          Resolution|---                         |WAITINGFORINFO
>
> --- Comment #21 from Laurent Montel <montel@kde.org> ---
> wait for info
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
>
Comment 23 Laurent Montel 2012-09-07 06:47:04 UTC
Ah ? sorry I have a lot of mail... And didn't see it.
And I can't find it...
Comment 24 Jerry Lumpkins 2012-09-08 22:14:38 UTC
Please review ALL of the attachments that I included on this issue. Not
just the last one.
On Sep 7, 2012 2:47 AM, "Laurent Montel" <montel@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=205791
>
> Laurent Montel <montel@kde.org> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>              Status|NEEDSINFO                   |UNCONFIRMED
>          Resolution|WAITINGFORINFO              |---
>      Ever confirmed|1                           |0
>
> --- Comment #23 from Laurent Montel <montel@kde.org> ---
> Ah ? sorry I have a lot of mail... And didn't see it.
> And I can't find it...
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
>
Comment 25 Laurent Montel 2012-09-10 16:52:06 UTC
"" Non inline image mail (80.34 KB, application/mbox)" this one work.
" Example mail (12.16 KB, application/mbox) " this one work.

and " attachment-27234-0.html (2.50 KB, text/html) " it's just a html file.
so need a good example
Comment 26 Jerry Lumpkins 2012-09-12 12:53:19 UTC
Here is a list of the current attachments to this issue:


  Attachments   *Non inline image
mail*<https://bugs.kde.org/attachment.cgi?id=47635> (80.34
KB, application/mbox)
2010-06-03 15:33 UTC<https://bugs.kde.org/show_bug.cgi?id=205791#attach_47635>,
Gareth   Details <https://bugs.kde.org/attachment.cgi?id=47635&action=edit>
*Example mail* <https://bugs.kde.org/attachment.cgi?id=48284> (12.16 KB,
application/mbox)
2010-06-24 12:36 UTC<https://bugs.kde.org/show_bug.cgi?id=205791#attach_48284>,
Thomas Tanghus
Details<https://bugs.kde.org/attachment.cgi?id=48284&action=edit>
*attachment-27234-0.html* <https://bugs.kde.org/attachment.cgi?id=72658> (2.50
KB, text/html)
2012-07-21 03:50 UTC<https://bugs.kde.org/show_bug.cgi?id=205791#attach_72658>,
Jerry Lumpkins
Details<https://bugs.kde.org/attachment.cgi?id=72658&action=edit>
*attachment-27234-1.dat* <https://bugs.kde.org/attachment.cgi?id=72659> (1
bytes, multipart/alternative)
2012-07-21 03:50 UTC<https://bugs.kde.org/show_bug.cgi?id=205791#attach_72659>,
Jerry Lumpkins
Details<https://bugs.kde.org/attachment.cgi?id=72659&action=edit>
*emailSrcForImage.txt* <https://bugs.kde.org/attachment.cgi?id=72660> (224.05
KB, text/plain)
2012-07-21 03:50 UTC<https://bugs.kde.org/show_bug.cgi?id=205791#attach_72660>,
Jerry Lumpkins
Details<https://bugs.kde.org/attachment.cgi?id=72660&action=edit>
*kmailInlineHtmlProblem.png*
<https://bugs.kde.org/attachment.cgi?id=72661> (226.14
KB, image/png)
2012-07-21 03:50 UTC<https://bugs.kde.org/show_bug.cgi?id=205791#attach_72661>,
Jerry Lumpkins
Details<https://bugs.kde.org/attachment.cgi?id=72661&action=edit>
View
All <https://bugs.kde.org/attachment.cgi?bugid=205791&action=viewall> Add
an attachment<https://bugs.kde.org/attachment.cgi?bugid=205791&action=enter>(proposed
patch, testcase, etc.)

Have you reviewed the content of the file emailSrcForImage.txt that I
attached on July 21st 2012?
That file does not work.

I do not know what else to provide you other than another copy of the a
failed email source.

Regards,


Jerry Lumpkins
Software Engineer


On Mon, Sep 10, 2012 at 12:52 PM, Laurent Montel <montel@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=205791
>
> --- Comment #25 from Laurent Montel <montel@kde.org> ---
> "" Non inline image mail (80.34 KB, application/mbox)" this one work.
> " Example mail (12.16 KB, application/mbox) " this one work.
>
> and " attachment-27234-0.html (2.50 KB, text/html) " it's just a html file.
> so need a good example
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
>
Comment 27 Laurent Montel 2012-09-12 14:57:35 UTC
Ok was not better to store as mbox.
Ok fixed.
Comment 28 Laurent Montel 2012-09-12 15:01:45 UTC
Git commit c396cc5875786f9bd403de1167d03fae6c3c74b8 by Montel Laurent.
Committed on 12/09/2012 at 17:01.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 205791 - kmail cannot display html messages with images refered

with Content ID

FIXED-IN: 4.9.2

M  +1    -1    kmime/kmime_headers.cpp

http://commits.kde.org/kdepimlibs/c396cc5875786f9bd403de1167d03fae6c3c74b8