Fix Bug 205791 - kmail cannot display html messages with images refered

with Content ID

FIXED-IN: 4.9.2
BUG: 205791